# account-compression-anchor-gen

./: Cargo.toml
idls/: account_compression.json  bubblegum.json
programs/account-compression/: Cargo.toml  idl.json
programs/account-compression/src/: lib.rs
programs/bubblegum/: Cargo.toml  idl.json
programs/bubblegum/src/: lib.rs
